# aiigo-desktop

./: .env.example  .gitignore  CLAUDE.md  DEPENDENCY_VALIDATION.md  IMPLEMENTATION_GUIDE.md  foundry.toml  index.html  package-lock.json  package.json  vite.config.ts  wallet-unlock-redesign.jsx
cache/: solidity-files-cache.json
contracts/: EscrowManager.sol  NodeRegistry.sol  ProofOfWorkVerifier.sol  TaskMarketplace.sol
docs/: COMPUTING_POWER_SYSTEM_DESIGN.md  SOLIDITY_CONTRACTS_SPEC.md
src-tauri/: .env  Cargo.toml  tauri.conf.json  validate-deps.sh
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/compute/: commands.rs  config.rs  db.rs  mod.rs  mutations.rs  sync.rs  types.rs
src-tauri/src/dashboard/: commands.rs  mod.rs  valuation.rs
src-tauri/src/wallet/: mod.rs  transaction_commands.rs  transaction_types.rs  types.rs
src-tauri/src/wallet/bitcoin/: balance.rs  commands.rs  mnemonic.rs  mod.rs  private_key.rs  transaction.rs  wallet.rs
src-tauri/src/wallet/chain/: mod.rs  traits.rs
src-tauri/src/wallet/evm/: balance.rs  commands.rs  config.rs  mnemonic.rs  mod.rs  price.rs  price_manager.rs  private_key.rs  transaction.rs  wallet.rs
src-tauri/src/wallet/evm/provider/: health.rs  hybrid.rs  metrics.rs  mod.rs  pool.rs  registry.rs  types.rs
src-tauri/src/wallet/security/: auth.rs  backend.rs  commands.rs  keystore.rs  log_sanitize.rs  mod.rs  secret_envelope.rs  session.rs  types.rs
src-tauri/src/wallet/state/: commands.rs  freshness.rs  mod.rs  portfolio.rs  price.rs  types.rs
src-tauri/src/wallet/sync/: engine.rs  mod.rs  types.rs
(+81 files in other folders)
