[package]
name = "aiigo-desktop"
version = "0.1.0"
description = "Aiigo desktop application"
authors = ["aiigo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix seems redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aiigo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bdk = "0.30.2"
bitcoin = "0.32.7"
bip39 = "2.2.0"
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.9.2"
tauri-plugin-window-state = "2.4.0"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.19"
hex = "0.4"
ethers = { version = "2.0", features = ["rustls", "ws"] }
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
